--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 </head>
   
 <body>
-<h1> HELLO </h1>
+<h1> Sebastian Lijo — Fall 2021 — Design 3A </h1>
+  <p
+     <a href="project-one/index.html">Project 1 Final <a/>
+  </p>
+  <p>
+    <a href="above-below/index.html"> Above / Below Writing </a>
+  </p>
+  <p> 
+    <a href="project-one-writing/index.html">Project 1 Writing</a>
+   </p>
 </body>
   
 </html>
