--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1> Sebastian Lijo — Fall 2021 — Design 3A </h1>
   <p
-     <a href="project-one/index.html">Project 1 Final <a/>
+     <a href="project-one/index.html">Project 1 Final </a>
   </p>
   <p>
     <a href="above-below/index.html"> Above / Below Writing </a>
