--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="above-below/index.html"> Above / Below Writing </a>
   </p>
   <p> 
-    <a href="project-one-writing/index.html">Project 1 Writing</a>
+    <a href="project-one/writing.html">Project 1 Writing</a>
    </p>
 </body>
   
