--- a/project-one/writing.html
+++ b/project-one/writing.html
@@ -9,6 +9,12 @@
 
   <p> For Project 1, my piece will be a one minute video. With Now Is The Time as the thematic prompt, I felt the title implied a focus on the contemporary issues of our time while simultaneously serving as a call to action. With that in mind, I chose to confront our climate crisis. It's difficult to exaggerate the immediate danger those born at the start of the new millenia will face in their lifetimes. I want to call attention to the damage that is being done to nature, and inherently, ourselves in the process. What I hope to communicate and inspire is a sense of dependancy and kinship that's intrinsic in the relationship between every living being on Earth. And even more so, a change in action. Whether that be personal practice in regard to recycling or sustainable consumer behavior like upcycling and thrifting, or more direct action like protesting.    
   </p>
+  <b></b>
+  <ul>
+    <li> iPhone </li>
+    <li> Time Square Mega Screen</li>
+    <li> Display TV</li>
+  </ul>
 </body>
   
 </html>
