--- a/project-one/writing.html
+++ b/project-one/writing.html
@@ -16,7 +16,7 @@
       <ul>
         <li>Almost everyone has access to an iPhone or more broadly a smartphone. People have the ability to zoom in, pause, screenshot ad then share with others the video they watch. That's what makes it an essential platform to exist on.</li>
         <li> <img src="https://images.unsplash.com/photo-1519923834699-ef0b7cde4712?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2875&q=80" 
-     width="400" 
+     width="auto" 
      height="400"/>
         </li>
       </ul>
