--- a/project-one/writing.html
+++ b/project-one/writing.html
@@ -15,9 +15,9 @@
     }
     
     li.image {
-      height: 400px;
-      position: relative;
-      width: auto;
+      height: ;
+      position: ;
+      width: ;
       }
       
     </style>
@@ -45,7 +45,9 @@
       Time Square Mega Screen
       <ul>
         <li>Displaying a video on a Time Square billboard ascribes a feeling of monumentality. It demands the viewer to stand at the screen, staring up at it with full attention (so long as it is something captivating). The adverse effect to using a billboard is that after people have seen it once or twice, it is disgregarded as background noise.</li>
-         <li class="image"> <img src="https://images.unsplash.com/photo-1536242019389-18dea718fd7d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3270&q=80"/>
+         <li class="image"> <img src="https://images.unsplash.com/photo-1536242019389-18dea718fd7d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3270&q=80"
+     width="auto" 
+     height="400"/>
         </li>
       </ul>
     </li>
