--- a/project-one/writing.html
+++ b/project-one/writing.html
@@ -13,6 +13,11 @@
     ul {
       padding: 0;
     }
+      
+    .screen {
+      text-transform: uppercase;
+      }
+      
     .descrip {
       margin-bottom: 20px;
       }
@@ -34,7 +39,7 @@
   </p>
   <b></b>
   <ul>
-    <li>
+    <li class="screen">
       iPhone
       <ul>
         <li class="descrip">Almost everyone has access to an iPhone or more broadly a smartphone. People have the ability to zoom in, pause, screenshot ad then share with others the video they watch. That's what makes it an essential platform to exist on.</li>
@@ -44,7 +49,7 @@
         </li>
       </ul>
     </li>
-    <li>
+    <li class="screen">
       Time Square Mega Screen
       <ul>
         <li class="descrip">Displaying a video on a Time Square billboard ascribes a feeling of monumentality. It demands the viewer to stand at the screen, staring up at it with full attention (so long as it is something captivating). The adverse effect to using a billboard is that after people have seen it once or twice, it is disgregarded as background noise.</li>
@@ -54,7 +59,7 @@
         </li>
       </ul>
     </li>
-    <li>
+    <li class="screen">
       Laptop
       <ul>
         <li class="descrip">I orginally had "Display TVs" in this section but felt that the average person doesnt come in contact with that setup enough in their daily lives to warrant it. I chose the laptop instead because once again most people utilize a laptop, and while it offers most of the same functionalities that a smartphone does, I feel the laptop inherently prompts people to research what they have read / watched. That is a secondary goal of the video, to encourage people to research the theme and to contiune that practice of self-intitiated learning.</li>
