--- a/project-one/index.html
+++ b/project-one/index.html
@@ -1,12 +1,120 @@
-
 <html>
-  
-<head> 
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            background: black;
+            color: lightgray;
+            font-family: 'Roboto', sans-serif;
+            font-size: ;
+            text-align: center;
+            margin-right: 25px;
+            margin-left: 25px;
+        }
+
+        h1 {
+            font-size: 50px;
+            letter-spacing: ;
+            text-transform: uppercase;
+            margin-top: 35px;
+        }
+
+        iframe {
+            border: none;
+            margin: 0 auto;
+            margin-bottom: 100px;
+        }
+
+        .prompt {
+            padding-bottom: 50px;
+            border-bottom: 2px solid lightgray;
+        }
+
+        p {
+            font-size: 25px;
+            padding-right: 25px;
+            padding-left: 25px;
+        }
+
+        .title {
+            font-size: 25px;
+            text-transform: uppercase;
+        }
+
+        ul {
+            text-align: left;
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            font-size: 25px;
+            padding: 25px;
+        }
+
+        li.description {
+            font-size: 25px;
+            padding: 0;
+            padding-top: 25px;
+            padding-bottom: 25px;
+        }
+
+        li.image {
+            padding: 0;
+            padding-top: 25px;
+            padding-bottom: 25px;
+        }
+
+    </style>
 </head>
-  
+
 <body>
-<h1> Project 1 Final </h1>
-  <p</p>
+    <h1>Now Is The Time</h1>
+
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/tiNebEfL9m8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p class="prompt">
+        With Now Is The Time as the prompt, I felt the work should reflect some contemporary issue while simultaneously serving as a call to action. I believe our climate crisis to be one of the most existential issues of our time, and I wanted to illicit the dread and damage I perceive when confronted with that reality. The strategic approach I took was to emphasize the increase and decrease of biomatter and anthropogenic mass recorded during the year 2021. I chose to have the statistics increase by single digits to punctuate how unfathomable something of that magnitude is. Regarding imagery, I chose to incorporate granularity to comment on the theme of deterioration. That is reflected in the lo-fi effect of the background sound as well, of which I slowed down to exaggerate the somber tone it brings. What I hope to communicate is not only the destruction of the planet but also to remind the viewer of the dependency and kinship that's intrinsic in the relationship between every living being on Earth. If the audience feels encouraged to change their lifestyle, to whatever degree, then I'll feel the piece is successful.
+    </p>
+
+    <ul>
+        <li>
+            <span class="title">iPhone</span>
+            <ul>
+                <li class="description">
+                    As almost everyone has access to an iPhone or smartphone, it's the best platform for transmission. People have immediate acess to whatever site or platform the video exists on, and have the immediate ability to share it with others. As the intention with all climate activists is to inform and encourage as many people as possible, this is one of the best routes to accomplish that.
+                </li>
+                <li class="image">
+                    <img src="images/Phone.png" width="auto" height="400" />
+                </li>
+            </ul>
+        </li>
+
+        <li>
+            <span class="title">Laptop</span>
+            <ul>
+                <li class="description">While a laptop offers much of the same capabilities as a smarphone, I chose to display my video on this device because of how it inherently prompts people to research what they have read / watched. That is a secondary goal of the video, to encourage people to research the theme and to continue that practice of self-initiated learning.</li>
+                <li class="image">
+                    <img src="images/Laptop.png" width="auto" height="400" />
+                </li>
+            </ul>
+        </li>
+
+        <li>
+            <span class="title">Mega Screen</span>
+            <ul>
+                <li class="description">This last screen I chose because of how it reflects significance of the content. Displaying a video—or any content for that metter—on a billboard screen reminiscent of Times Square ascribes it a feeling of monumentality. It demands the viewer to stand at the screen, staring up at it with full attention. The adverse effect to using a billboard is that after people have seen it once or twice, it is disregarded as background noise.
+                </li>
+                <li class="image">
+                    <img src="images/Billboard.png" width="auto" height="400" />
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
-  
+
 </html>
