--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <p> 
     <a href="project-one/writing.html">Project 1 Writing</a>
    </p>
+   <p> 
+    <a href="https://www.are.na/sebastian-lijo/project-2-sebastian-l">Project 2 Are.na Channel</a>
+   </p>
 </body>
   
 </html>
