--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 <h1> Sebastian Lijo — Fall 2021 — Design 3A </h1>
   <p>
-     <a href="project-one/index.html">Project 1 Final </a>
+     <a href="project-one/index.html">Project 1 Final</a>
   </p>
   <p>
-    <a href="above-below/index.html"> Above / Below Writing </a>
+    <a href="above-below/index.html"> Above / Below Writing</a>
   </p>
   <p> 
     <a href="project-one/writing.html">Project 1 Writing</a>
@@ -17,6 +17,9 @@
    <p> 
     <a href="https://www.are.na/sebastian-lijo/project-2-sebastian-l">Project 2 Are.na Channel</a>
    </p>
+   <p>
+     <a href="responsive/responsive.html">Responsive Screenshot Exercise </a>
+  </p>
 </body>
   
 </html>
